{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 20,
  "lineage": "a64e3711-6c4a-f912-45cd-406f9a08359a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270074865685:subnet/subnet-b923bbc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-b923bbc3",
            "map_public_ip_on_launch": true,
            "owner_id": "270074865685",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/rmweir-import": "shared",
              "kubernetes.io/cluster/wes-eks": "shared",
              "kubernetes.io/cluster/wes-eks-2": "shared",
              "kubernetes.io/cluster/wes-eks-4": "shared"
            },
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270074865685:vpc/vpc-fbd9e393",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-cb4d4aa3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-77657a1f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fbd9e393",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-baa567d1",
            "owner_id": "270074865685",
            "state": "available",
            "tags": {
              "Name": "default-VPC",
              "kubernetes.io/cluster/wes-eks": "shared",
              "kubernetes.io/cluster/wes-eks-4": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rke2-server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0495cbf65907a24fd",
            "arn": "arn:aws:ec2:us-east-2:270074865685:instance/i-08acf46a862e2fde8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08acf46a862e2fde8",
            "instance_state": "running",
            "instance_type": "m5.8xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07593af3b481cfae8",
            "private_dns": "ip-172-31-5-247.us-east-2.compute.internal",
            "private_ip": "172.31.5.247",
            "public_dns": "ec2-18-217-218-52.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.218.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06826c2060946e2e8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hgrketest-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-42bf9d2a",
            "tags": {
              "Leader": "true",
              "Name": "hgrketest-server-0",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad5b2a919b5f7353"
            ]
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0495cbf65907a24fd",
            "arn": "arn:aws:ec2:us-east-2:270074865685:instance/i-0862d7e38282ce6c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0862d7e38282ce6c8",
            "instance_state": "running",
            "instance_type": "m5.8xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a97a6d4d2bd07371",
            "private_dns": "ip-172-31-1-63.us-east-2.compute.internal",
            "private_ip": "172.31.1.63",
            "public_dns": "ec2-3-22-250-64.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.250.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0876265311f0338b0",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hgrketest-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-42bf9d2a",
            "tags": {
              "Leader": "false",
              "Name": "hgrketest-server-1",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad5b2a919b5f7353"
            ]
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0495cbf65907a24fd",
            "arn": "arn:aws:ec2:us-east-2:270074865685:instance/i-010c3bd75e1238c98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010c3bd75e1238c98",
            "instance_state": "running",
            "instance_type": "m5.8xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00084a86bee425347",
            "private_dns": "ip-172-31-5-44.us-east-2.compute.internal",
            "private_ip": "172.31.5.44",
            "public_dns": "ec2-3-138-122-44.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.122.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09937cf5849ee6102",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hgrketest-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-42bf9d2a",
            "tags": {
              "Leader": "false",
              "Name": "hgrketest-server-2",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad5b2a919b5f7353"
            ]
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rke2-master-nlb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrketest-nlb/8de0929e5f8e3594",
            "arn_suffix": "net/hgrketest-nlb/8de0929e5f8e3594",
            "dns_name": "hgrketest-nlb-8de0929e5f8e3594.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrketest-nlb/8de0929e5f8e3594",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "hgrketest-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-42bf9d2a"
              },
              {
                "subnet_id": "subnet-b923bbc3"
              },
              {
                "subnet_id": "subnet-fa02c1b6"
              }
            ],
            "subnets": [
              "subnet-42bf9d2a",
              "subnet-b923bbc3",
              "subnet-fa02c1b6"
            ],
            "vpc_id": "vpc-fbd9e393",
            "zone_id": "ZLMOA37VPKANP"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rke2-master-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrketest-nlb/8de0929e5f8e3594/a97a245113ebebae",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrketest-nlb/8de0929e5f8e3594/a97a245113ebebae",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrketest-nlb/8de0929e5f8e3594",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rke2-master-supervisor-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrketest-nlb/8de0929e5f8e3594/b9e0154128d9f876",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrketest-nlb/8de0929e5f8e3594/b9e0154128d9f876",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrketest-nlb/8de0929e5f8e3594",
            "port": 9345,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rke2-master-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e",
            "arn_suffix": "targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 30,
                "port": "6443",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e",
            "lambda_multi_value_headers_enabled": false,
            "name": "hgrketest-nlb-tg",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rke2-master-supervisor-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd",
            "arn_suffix": "targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 30,
                "port": "9345",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd",
            "lambda_multi_value_headers_enabled": false,
            "name": "hgrketest-nlb-supervisor-tg",
            "port": 9345,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rke2-nlb-attachement",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e-20201019000422748200000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e",
            "target_id": "i-08acf46a862e2fde8"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e-20201019000422786900000004",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e",
            "target_id": "i-0862d7e38282ce6c8"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e-20201019000422956800000007",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-tg/eb8335bc26a4015e",
            "target_id": "i-010c3bd75e1238c98"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rke2-nlb-supervisor-attachement",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd-20201019000423180200000008",
            "port": 9345,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd",
            "target_id": "i-08acf46a862e2fde8"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd-20201019000422836900000005",
            "port": 9345,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd",
            "target_id": "i-0862d7e38282ce6c8"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd-20201019000422888600000006",
            "port": 9345,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrketest-nlb-supervisor-tg/b079b34a767289bd",
            "target_id": "i-010c3bd75e1238c98"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rke2-all-open",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270074865685:security-group/sg-0ad5b2a919b5f7353",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad5b2a919b5f7353",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hgrketest-sg",
            "name_prefix": "",
            "owner_id": "270074865685",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    }
  ]
}